<resources>
    <string name="app_name">Going Somewhere?</string>
    <string name="add_item">Add Item</string>
    <string name="item">Item</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">399742497064236</string>
    <string name="fb_login_protocol_scheme">fb399742497064236</string>
    <string name="sign_out">Sign Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Signed Out</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="trip">Trip</string>
    <string name="location">Location</string>
    <string name="add_trip">Add Trip</string>
    <string name="date">Date</string>
    <string name="empty_edit_text">This can\'t be empty!</string>
    <string name="your_trips">Your Trips</string>
    <string name="add_new_trip">Add New Trip!</string>
    <string name="add_new_item">Add New Item!</string>
    <string name="add_friend">Add Friend</string>
</resources>
