<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:text="@string/add_new_trip"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/trip" />

    <EditText
        android:id="@+id/add_trip_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/location" />

    <EditText
        android:id="@+id/add_trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/date"
        android:inputType="date" />

    <Button
        android:id="@+id/add_trip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_trip" />

</LinearLayout>